--- a/src/components/Shelf/Shelf.module.scss
+++ b/src/components/Shelf/Shelf.module.scss
@@ -5,6 +5,7 @@ $main-color: #81d8d0;
   padding: 0 52px;
   width: 100%;
   max-width: 2000px;
+  margin-bottom: 60px;
 
   &__item {
     display: flex !important;
