--- a/src/components/Minicart/ProductItem/ProductItem.module.scss
+++ b/src/components/Minicart/ProductItem/ProductItem.module.scss
@@ -34,13 +34,22 @@ $main-color: #81d8d0;
       margin-bottom: 5px;
       width: 100%;
       max-width: 160px;
-      margin-bottom: 8px;
+
+      background: linear-gradient(0, #00a4b7, #00a4b7) 0 100% no-repeat;
+      background-size: 0 1px;
+      transition: background-size 0.5s;
+      display: inline;
+
+      &:hover {
+        background-size: 100% 1px;
+      }
     }
 
     &--price {
       font-size: 12px;
       font-weight: normal;
       color: #000;
+      margin-top: 8px;
     }
 
     &--quantity {
@@ -60,6 +69,16 @@ $main-color: #81d8d0;
       padding: 0;
       margin: 0;
       cursor: pointer;
+
+      line-height: 1.15rem;
+      background: linear-gradient(0, #00a4b7, #00a4b7) 0 100% no-repeat;
+      background-size: 0 1px;
+      transition: background-size 0.5s;
+      display: inline;
+
+      &:hover {
+        background-size: 100% 1px;
+      }
 
       &::after {
         content: "";
