--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -83,6 +83,7 @@ $white: #fff;
   }
 
   &__midbar {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
