--- a/src/components/DoubleCard/DoubleCard.module.scss
+++ b/src/components/DoubleCard/DoubleCard.module.scss
@@ -1,13 +1,23 @@
 .double-card {
   display: flex;
   justify-content: center;
-  column-gap: 112px;
+  gap: 112px;
   width: 100%;
   max-width: 1280px;
   margin: 0 auto 60px;
 
+  @media (max-width: 900px) {
+    flex-direction: column;
+    gap: 16px;
+    margin: 0;
+  }
+
   &__item {
     width: 40%;
+
+    @media (max-width: 900px) {
+      width: 100%;
+    }
 
     picture {
     }
@@ -18,6 +28,11 @@
     flex-direction: column;
     align-items: center;
     margin-top: 16px;
+
+    @media (max-width: 900px) {
+      align-items: flex-start;
+      padding: 0 24px;
+    }
 
     h3 {
       font-size: 24px;
