--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,7 +1,151 @@
+$black: #000;
+$white: #fff;
+$main-color: #81d8d0;
+
 .container {
   margin-top: 142px;
 
   @media (max-width: 600px) {
     margin-top: 214px;
+  }
+}
+
+.video-top {
+  position: relative;
+  margin: 0 auto;
+  max-width: 1600px;
+  margin-bottom: 80px;
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: 80px;
+    width: 100%;
+
+    @media (max-width: 900px) {
+      position: initial;
+      margin-top: 10px;
+    }
+
+    h3 {
+      font-size: 24px;
+      font-weight: bold;
+      color: $white;
+      text-align: center;
+
+      @media (max-width: 900px) {
+        color: $black;
+      }
+    }
+
+    p {
+      display: inline-block;
+      width: 100%;
+      max-width: 493px;
+      margin: 10px auto 14px;
+      font-size: 14px;
+      font-weight: normal;
+      color: $white;
+      text-align: center;
+
+      @media (max-width: 900px) {
+        color: $black;
+        max-width: none;
+        margin: 20px auto 0;
+      }
+    }
+  }
+}
+
+.video-bottom {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  max-width: 1600px;
+  margin-bottom: 80px;
+
+  video {
+    width: 70%;
+
+    @media (max-width: 900px) {
+      width: 100%;
+    }
+  }
+
+  &__content {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 50px;
+
+    @media (max-width: 900px) {
+      width: 100%;
+      padding: 40px 10px 10px 10px;
+      align-items: center;
+    }
+
+    h3 {
+      font-size: 24px;
+      font-weight: bold;
+      color: $black;
+      margin-bottom: 10px;
+
+      @media (max-width: 900px) {
+        text-align: center;
+      }
+    }
+
+    p {
+      font-size: 14px;
+      font-weight: normal;
+      color: $black;
+      line-height: 24px;
+      margin-bottom: 14px;
+
+      @media (max-width: 900px) {
+        text-align: center;
+      }
+    }
+
+    a {
+      display: flex;
+      position: relative;
+
+      span {
+        font-size: 14px;
+        font-weight: bold;
+
+        background: linear-gradient(0, #00a4b7, #00a4b7) 0 100% no-repeat;
+        background-size: 0 1px;
+        transition: background-size 0.5s;
+        padding-bottom: 5px;
+      }
+
+      &:hover {
+        span {
+          background-size: 100% 1px;
+        }
+      }
+
+      &::after {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        left: 90px;
+        top: 45%;
+        border: solid #000;
+        opacity: 0.5;
+        border-width: 0 1px 1px 0;
+        padding: 2px;
+        transform: rotate(-45deg);
+        -webkit-transform: rotate(-45deg);
+      }
+    }
+  }
+
+  .banner-love {
+    margin-bottom: 56px;
   }
 }
