--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -149,3 +149,47 @@ $main-color: #81d8d0;
     margin-bottom: 56px;
   }
 }
+
+.card-stories {
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto 130px;
+
+  @media (max-width: 900px) {
+    padding: 0 16px;
+  }
+
+  h2 {
+    font-size: 24px;
+    font-weight: bold;
+    color: $black;
+    margin-bottom: 10px;
+    text-align: center;
+    margin-bottom: 35px;
+
+    @media (max-width: 900px) {
+      text-align: left;
+    }
+  }
+
+  &__content {
+    display: flex;
+    justify-content: center;
+    gap: 36px;
+
+    @media (max-width: 900px) {
+      flex-wrap: wrap;
+    }
+  }
+}
+
+.tipbar {
+  h2 {
+    font-size: 24px;
+    font-weight: bold;
+    color: $black;
+    margin-bottom: 10px;
+    text-align: center;
+    margin-bottom: 35px;
+  }
+}
